--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@ SOFTWARE.
 var config = {
     client_id: "public-client",
     redirect_uri: "http://127.0.0.1:5500/index.html",
-    authorization_endpoint: "http://localhost:9000/oauth2/authorize",
-    token_endpoint: "http://localhost:9000/oauth2/token",
+    authorization_endpoint: "http://134.255.176.225:9000/oauth2/authorize",
+    token_endpoint: "http://134.255.176.225:9000/oauth2/token",
     requested_scopes: "user.read openid profile"
     // http://localhost:9000/oauth2/authorize?client_id=public-client&redirect_uri=http%3A%2F%2F127.0.0.1%3A5500%2Findex.html&scope=profile&response_type=code&response_mode=query&code_challenge_method=S256&code_challenge=Dfnd7KP2xG5zlPFxWY1gb6fbqDN_sfYAkDL25fLnjuU&state=yzw0zzb57r&nonce=celwrgmlial
 };
