--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ SOFTWARE.
 // Configure your application and authorization server details
 var config = {
     client_id: "public-client",
-    redirect_uri: "http://127.0.0.1:5500/index.html",
+    redirect_uri: "https://syntax-sages.netlify.app/index.html",
     authorization_endpoint: "http://134.255.176.225:9000/oauth2/authorize",
     token_endpoint: "http://134.255.176.225:9000/oauth2/token",
     requested_scopes: "user.read openid profile"
